--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.30)
 project(SFX_GL DESCRIPTION "Base OpenGL implementation" LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
 
 set(SOURCE_DIR "${PROJECT_SOURCE_DIR}/src/")
